# codebase-research-agent

./: .gitignore  README.md  pyproject.toml
config/: settings.py  urls.py
research/: models.py  serializers.py  services.py  urls.py  views.py
research/agents/: data.py  graph.py  memory.py  types.py
research/agents/nodes/: build_repo_map.py  check_existing_repo_node.py  chunk_extractor.py  clone_repo_node.py  explore_evaluate_node.py  explore_search_node.py  extract_instructions_node.py  generate_keywords_node.py  route_nodes.py  synthesize_node.py  synthesize_output_node.py  utils.py
research/migrations/: 0001_initial.py
research/templates/research/: chat.html
