[project]
name = "codebase-research-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=6.0.6",
    "django-environ>=0.14.0",
    "djangorestframework>=3.17.1",
    "drf-spectacular>=0.29.0",
    "psycopg[binary]>=3.3.4",
]

[dependency-groups]
dev = [
    "ruff>=0.15.18",
]
