[project]
name = "codebase-research-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=6.0.6",
    "django-environ>=0.14.0",
    "djangorestframework>=3.17.1",
    "drf-spectacular>=0.29.0",
    "langchain>=1.3.10",
    "langchain-core>=1.4.8",
    "langchain-openai>=1.3.2",
    "langgraph>=1.2.6",
    "langgraph-checkpoint-postgres>=3.1.0",
    "psycopg[binary]>=3.3.4",
]

[dependency-groups]
dev = [
    "ruff>=0.15.18",
]
